Fix place text not truncating

--- a/src/components/Landing/Landing.css
+++ b/src/components/Landing/Landing.css
@@ -41,9 +41,6 @@
 }
 
 .thumbnail-overlay-item {
-	align-items: center;
-	display: flex;
-	flex-direction: row;
 	position: absolute;
 }
 
